[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/ControlBlock.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/UI/spacebar.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/effects/light_mask.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 31, 6 )

[sub_resource type="Animation" id=3]
resource_name = "hide_grid"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("GridMask:energy")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "show_grid"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("GridMask:energy")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[node name="ControlJump" type="KinematicBody2D"]
z_index = 2
collision_mask = 0
script = ExtResource( 1 )

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Placement" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 17

[node name="PlacementCollider" type="CollisionShape2D" parent="Placement"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 6

[node name="GridMask" type="Light2D" parent="."]
position = Vector2( -1.90735e-06, 2.86102e-06 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
energy = 0.0
mode = 2
range_layer_min = -2
range_layer_max = 2
range_item_cull_mask = 2

[node name="Control" type="Control" parent="."]
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationGrid" type="AnimationPlayer" parent="."]
anims/hide_grid = SubResource( 3 )
anims/show_grid = SubResource( 4 )

[node name="Tween" type="Tween" parent="."]
[connection signal="gui_input" from="Control" to="." method="_on_Control_gui_input"]
[connection signal="mouse_entered" from="Control" to="." method="_on_Control_mouse_entered"]
[connection signal="mouse_exited" from="Control" to="." method="_on_Control_mouse_exited"]
